--- a/sites/all/themes/gxnulib/sass/layouts/sword/sword.layout.scss
+++ b/sites/all/themes/gxnulib/sass/layouts/sword/sword.layout.scss
@@ -54,7 +54,7 @@
   @extend .l-constrained;
 }
 
-@include breakpoint($tab, true) {
+@include breakpoint($tablet, true) {
   .l-constrained {
     width: 90%;
   }
@@ -84,7 +84,7 @@
   }
 }
 
-@include breakpoint($desk, true) {
+@include breakpoint($desktop, true) {
   .l-constrained {
     width: 80%;
   }
