--- a/sites/all/themes/gxnulib/css/gxnulib.no-query.css
+++ b/sites/all/themes/gxnulib/css/gxnulib.no-query.css
@@ -13,6 +13,15 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
 /* 
+    Created on : Apr 10, 2015, 9:44:24 PM
+    Author     : Stephen
+*/
+/*
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+*/
+/* 
     Created on : Apr 2, 2015, 3:49:40 PM
     Author     : Stephen
 */
@@ -239,6 +248,7 @@ and open the template in the editor.
 /* line 14, ../sass/components/misc/_site-branding.scss */
 .site-branding {
   padding: 20px 0;
+  text-align: center;
   margin: 0 auto; }
   /* line 13, D:/Ruby21-x64/lib/ruby/gems/2.1.0/gems/toolkit-2.9.0/stylesheets/toolkit/_clearfix.scss */
   .site-branding:after {
